--- a/page-source/course/course-html.html
+++ b/page-source/course/course-html.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belajar HTML</title>
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="../../../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../../css/alian.css">
+    <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/alian.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="../../../assets/img/title-icon.png" type="image/x-icon">
+    <link rel="icon" href="../../assets/img/title-icon.png" type="image/x-icon">
 </head>
 
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark navigasi">
         <div class="container">
-            <a class="navbar-brand text-light" href="../../../home.html">Belajar Koding</a>
+            <a class="navbar-brand text-light" href="../../home.html">Belajar Koding</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,19 +24,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-muted" href="../../../home.html">Home</a>
+                        <a class="nav-link text-muted" href="../../home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-muted" href="../../../kontak.html">Kontak</a>
+                        <a class="nav-link text-muted" href="../../kontak.html">Kontak</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-muted" href="../../../langganan.html">Langganan</a>
+                        <a class="nav-link text-muted" href="../../langganan.html">Langganan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-muted" href="../../../bantuan.html">Bantuan</a>
+                        <a class="nav-link text-muted" href="../../bantuan.html">Bantuan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-muted" href="#">Profile</a>
+                        <a class="nav-link text-muted" href="../../profil.html">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-muted" href="../../login.html">Login</a>
                     </li>
             </div>
         </div>
@@ -50,7 +53,7 @@
                 <h1>HyperText Markup Language</h1>
             </div>
             <div class="col-sm-2">
-                <img src="../../../assets/img/html-icon.png" width="100">
+                <img src="../../assets/img/html-icon.png" width="100">
             </div>
         </div>
 
